[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/gfx/logos/title.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/buttons/revert_button.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/buttons/end.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/buttons/next_question_button.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/backgrounds/game_background.png" type="Texture" id=5]
[ext_resource path="res://assets/gfx/buttons/okay_button.png" type="Texture" id=7]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=8]
[ext_resource path="res://questioner/questions.tscn" type="PackedScene" id=9]
[ext_resource path="res://confirmation/confirmation.tscn" type="PackedScene" id=10]
[ext_resource path="res://game/game.gd" type="Script" id=11]
[ext_resource path="res://assets/gfx/buttons/okay_button_disabled.png" type="Texture" id=12]
[ext_resource path="res://game/wipeout.tscn" type="PackedScene" id=13]
[ext_resource path="res://menu/label_font_style.tres" type="DynamicFont" id=14]
[ext_resource path="res://assets/fonts/MochiyPopOne-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/sfx/question.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/start_game.wav" type="AudioStream" id=17]
[ext_resource path="res://option_style_box_orange.tres" type="StyleBox" id=18]
[ext_resource path="res://option_style_box.tres" type="StyleBox" id=19]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.568627, 0.254902, 0.686275, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.568627, 0.254902, 0.686275, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.901961, 0.380392, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10
anti_aliasing = false

[sub_resource type="Theme" id=7]
default_font = ExtResource( 14 )
OptionButton/styles/hover = SubResource( 8 )
OptionButton/styles/normal = SubResource( 9 )
OptionButton/styles/pressed = SubResource( 10 )
PopupMenu/styles/hover = ExtResource( 18 )
PopupMenu/styles/panel = ExtResource( 19 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.568627, 0.254902, 0.686275, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_detail = 5
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 15 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.501961, 0.768627, 1, 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="MainCT" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadCT" type="HBoxContainer" parent="MainCT"]
margin_right = 1270.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="Title" type="TextureRect" parent="MainCT/HeadCT"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 0 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="ProgressCT" type="GridContainer" parent="MainCT/HeadCT"]
margin_left = 304.0
margin_right = 1270.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="GameCT" type="HBoxContainer" parent="MainCT"]
margin_top = 154.0
margin_right = 1270.0
margin_bottom = 710.0
size_flags_vertical = 3

[node name="GameBoardCT" type="GridContainer" parent="MainCT/GameCT"]
margin_left = 558.0
margin_top = 278.0
margin_right = 558.0
margin_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 8

[node name="ButtonCT" type="VBoxContainer" parent="MainCT/GameCT"]
margin_left = 1120.0
margin_right = 1270.0
margin_bottom = 556.0
rect_min_size = Vector2( 150, 0 )

[node name="PickTeamBTN" type="OptionButton" parent="MainCT/GameCT/ButtonCT"]
margin_right = 150.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 73 )
size_flags_horizontal = 3
theme = SubResource( 7 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
text = "Pick Team"
align = 1
expand_icon = true
items = [ "Pick Team", null, false, 0, null ]
selected = 0

[node name="YesNoCT" type="HBoxContainer" parent="MainCT/GameCT/ButtonCT"]
margin_top = 77.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 73 )

[node name="RevertBTN" type="TextureButton" parent="MainCT/GameCT/ButtonCT/YesNoCT"]
margin_right = 73.0
margin_bottom = 73.0
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="YesBTN" type="TextureButton" parent="MainCT/GameCT/ButtonCT/YesNoCT"]
margin_left = 77.0
margin_right = 150.0
margin_bottom = 73.0
size_flags_horizontal = 3
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="CenterCT" type="CenterContainer" parent="MainCT/GameCT/ButtonCT"]
margin_top = 154.0
margin_right = 150.0
margin_bottom = 402.0
size_flags_vertical = 3

[node name="CR" type="ColorRect" parent="MainCT/GameCT/ButtonCT/CenterCT"]
visible = false
margin_top = 99.0
margin_right = 150.0
margin_bottom = 149.0
rect_min_size = Vector2( 150, 50 )

[node name="Message" type="Label" parent="MainCT/GameCT/ButtonCT/CenterCT/CR"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Message"
align = 1
valign = 1
autowrap = true

[node name="PickRandom" type="Button" parent="MainCT/GameCT/ButtonCT/CenterCT"]
margin_top = 99.0
margin_right = 150.0
margin_bottom = 149.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 14 )
text = "Pick Random"

[node name="NextQuestionBTN" type="TextureButton" parent="MainCT/GameCT/ButtonCT"]
margin_top = 406.0
margin_right = 150.0
margin_bottom = 479.0
rect_min_size = Vector2( 0, 73 )
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="MainCT/GameCT/ButtonCT/NextQuestionBTN"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Next Question"
align = 1
valign = 1
autowrap = true

[node name="FinishGameBTN" type="TextureButton" parent="MainCT/GameCT/ButtonCT"]
margin_top = 483.0
margin_right = 150.0
margin_bottom = 556.0
rect_min_size = Vector2( 0, 73 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="MainCT/GameCT/ButtonCT/FinishGameBTN"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Finish
Game"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Questions" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="WipeoutTimer" type="Timer" parent="."]
one_shot = true

[node name="Confirmation" parent="." instance=ExtResource( 10 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0

[node name="Wipeout" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Clicks" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="NextQ" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="NewGameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[connection signal="item_selected" from="MainCT/GameCT/ButtonCT/PickTeamBTN" to="." method="_on_PickTeamBTN_item_selected"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/YesNoCT/RevertBTN" to="." method="_on_RevertBTN_pressed"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/YesNoCT/YesBTN" to="." method="_on_YesBTN_pressed"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/CenterCT/PickRandom" to="." method="_on_PickRandom_pressed"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/NextQuestionBTN" to="." method="_on_NextQuestionBTN_pressed"]
[connection signal="pressed" from="MainCT/GameCT/ButtonCT/FinishGameBTN" to="." method="_on_FinishGameBTN_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WipeoutTimer" to="." method="_on_WipeoutTimer_timeout"]
